[project]
name = "linkup-sdk"
version = "0.2.8"
description = "A Python Client SDK for the Linkup API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "LINKUP TECHNOLOGIES", email = "contact@linkup.so" }
]
keywords = ["linkup", "api", "sdk", "client", "search"]
license = "MIT"

classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "httpx",
  "pydantic"
]

[project.urls]
Homepage = "https://github.com/LinkupPlatform/linkup-python-sdk"
Documentation = "https://github.com/LinkupPlatform/linkup-python-sdk#readme"
Source = "https://github.com/LinkupPlatform/linkup-python-sdk"
Tracker = "https://github.com/LinkupPlatform/linkup-python-sdk/issues"

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "pytest-socket>=0.7.0",
]

[tool.mypy]
exclude = ['^tests/', 'venv/', '.venv/']
strict = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = ["raise ValueError", "raise TypeError"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "S", # flake8-bandit
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*_test.py" = ["S101"] # Use of assert detected

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkup"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
